paper - test plots

--- a/paper/sample-papers/jmlr-sample.tex
+++ b/paper/sample-papers/jmlr-sample.tex
@@ -112,7 +112,7 @@ List of keywords
 
 %\input{paper/sample-papers/sections/old-text}
 
-\input{paper/sample-papers/sections/04-experiments}
+\input{sections/04-experiments}
 
 \acks{Acknowledgements go here.}
 
