Updates from Overleaf

--- a/paper/sample-papers/jmlr-sample.tex
+++ b/paper/sample-papers/jmlr-sample.tex
@@ -21,6 +21,11 @@
  %\usepackage{siunitx}
 \usepackage{multirow}
 
+\usepackage{tikz,pgfplots}%,pgfplots,color,amsmath,amssymb}
+%\usepackage{caption}
+%\usepackage{subcaption}
+\usepackage[capitalise]{cleveref}
+
  % The following command is just for this sample document:
 \newcommand{\cs}[1]{\texttt{\char`\\#1}}% remove this in your real article
 
@@ -110,7 +115,7 @@ This is the abstract for this article.
 List of keywords
 \end{keywords}
 
-%\input{paper/sample-papers/sections/old-text}
+%\input{sections/old-text}
 
 \input{sections/04-experiments}
 
