--- a/paper/sample-papers/sections/04-experiments.tex
+++ b/paper/sample-papers/sections/04-experiments.tex
@@ -3,6 +3,63 @@
 
 \subsection{Balance dataset}
 
+\begin{figure}[htbp]
+\floatconts
+  {fig:teximage}
+  {\caption{Image Created Using \LaTeX\ Code}}
+  {\includeteximage{plots/balance-dist-class}}
+\end{figure}
+
+
+
+\begin{figure}[htbp]
+\floatconts
+  {fig:balance}
+  {\caption{Results for \textit{balance} dataset.}}
+  {%
+    \subfigure[Distribution between classes]{
+    \label{fig:balance:dist-class}%
+    \includeteximage{plots/balance-dist-class}
+    }%
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+  }
+\end{figure}
+
 
 \begin{table}[htbp]
 \scriptsize
