--- a/paper/sample-papers/plots/balance-oneC-0.tex
+++ b/paper/sample-papers/plots/balance-oneC-0.tex
@@ -1,7 +1,9 @@
 % This file was created by tikzplotlib v0.9.8.
 \begin{tikzpicture}
 
-\definecolor{color0}{rgb}{0.647058823529412,0.164705882352941,0.164705882352941}
+\definecolor{color0}{rgb}{1,0,1}
+\definecolor{color1}{rgb}{1,0.647058823529412,0}
+\definecolor{color2}{rgb}{0.647058823529412,0.164705882352941,0.164705882352941}
 
 \begin{axis}[
 legend cell align={left},
@@ -9,8 +11,8 @@ legend style={
   fill opacity=0.8,
   draw opacity=1,
   text opacity=1,
-  at={(0.03,0.97)},
-  anchor=north west,
+  at={(0.97,0.03)},
+  anchor=south east,
   draw=white!80!black
 },
 tick align=outside,
@@ -26,6 +28,62 @@ ytick style={color=black}
 ]
 \addplot [very thick, color0, dashed, forget plot]
 table {%
+0.01 0.736612903225806
+0.03 0.836935483870968
+0.05 0.872096774193548
+0.1 0.948709677419355
+0.15 0.903548387096774
+0.2 0.835322580645161
+};
+\addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
+table {%
+0.01 0.696612903225806
+0.03 0.786290322580645
+0.05 0.838870967741935
+0.1 0.932903225806452
+0.15 0.896612903225806
+0.2 0.833548387096774
+};
+\addplot [color0]
+table {%
+0.01 0.698225806451613
+0.03 0.793387096774194
+0.05 0.848709677419355
+0.1 0.938870967741936
+0.15 0.894354838709677
+0.2 0.835161290322581
+};
+\addlegendentry{SVM}
+\addplot [very thick, color1, dashed, forget plot]
+table {%
+0.01 0.022258064516129
+0.03 0.261129032258064
+0.05 0.460645161290323
+0.1 0.664193548387097
+0.15 0.801451612903226
+0.2 0.890806451612903
+};
+\addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
+table {%
+0.01 0
+0.03 0.0259677419354839
+0.05 0.168870967741935
+0.1 0.56758064516129
+0.15 0.745
+0.2 0.858225806451613
+};
+\addplot [color1]
+table {%
+0.01 0
+0.03 0.0441935483870968
+0.05 0.228225806451613
+0.1 0.581290322580645
+0.15 0.746451612903226
+0.2 0.859838709677419
+};
+\addlegendentry{DT}
+\addplot [very thick, color2, dashed, forget plot]
+table {%
 0.01 0.569193548387097
 0.03 0.57258064516129
 0.05 0.59758064516129
@@ -33,7 +91,7 @@ table {%
 0.15 0.89241935483871
 0.2 0.916612903225806
 };
-\addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
+\addplot [very thick, color2, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
 0.03 0.01
@@ -42,7 +100,7 @@ table {%
 0.15 0.754354838709677
 0.2 0.846451612903226
 };
-\addplot [color0]
+\addplot [color2]
 table {%
 0.01 0
 0.03 0.569193548387097
