Updates from Overleaf

--- a/paper/sample-papers/plots/balance-oneC-0-SVM-DT.tex
+++ b/paper/sample-papers/plots/balance-oneC-0-SVM-DT.tex
@@ -23,7 +23,9 @@ xtick style={color=black},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.05458064516129,
-ytick style={color=black}
+ytick style={color=black},
+height=4cm,
+width=7cm,
 ]
 \addplot [very thick, color0, dashed, forget plot]
 table {%
