--- a/paper/sample-papers/sections/04-experiments.tex
+++ b/paper/sample-papers/sections/04-experiments.tex
@@ -22,7 +22,12 @@
     \includeteximage{plots/balance-dist-class}
     }%
     \qquad
-    \subfigure[A Square]{\label{fig:square}%
+    \subfigure[Baseline error]{\label{fig:square}%
+      \includeteximage{plots/balance-baseline-error}
+      }
+    \qquad
+    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+      %\includeteximage{plots/balance-oneC-0-SVM-DT}
       \includeteximage{plots/balance-dist-class}
       }
     \qquad
@@ -37,26 +42,22 @@
     \subfigure[A Square]{\label{fig:square}%
       \includeteximage{plots/balance-dist-class}
       }
-    \qquad
-    \subfigure[A Square]{\label{fig:square}%
-      \includeteximage{plots/balance-dist-class}
-      }
-    \qquad
-    \subfigure[A Square]{\label{fig:square}%
-      \includeteximage{plots/balance-dist-class}
-      }
-    \qquad
-    \subfigure[A Square]{\label{fig:square}%
-      \includeteximage{plots/balance-dist-class}
-      }
-    \qquad
-    \subfigure[A Square]{\label{fig:square}%
-      \includeteximage{plots/balance-dist-class}
-      }
-    \qquad
-    \subfigure[A Square]{\label{fig:square}%
-      \includeteximage{plots/balance-dist-class}
-      }
+    %\qquad
+    %\subfigure[A Square]{\label{fig:square}%
+    %  \includeteximage{plots/balance-dist-class}
+    %  }
+    %\qquad
+    %\subfigure[A Square]{\label{fig:square}%
+    %  \includeteximage{plots/balance-dist-class}
+    %  }
+    %\qquad
+    %\subfigure[A Square]{\label{fig:square}%
+    %  \includeteximage{plots/balance-dist-class}
+    %  }
+    %\qquad
+    %\subfigure[A Square]{\label{fig:square}%
+    %  \includeteximage{plots/balance-dist-class}
+    %  }
   }
 \end{figure}
 
