--- a/paper/sample-papers/plots/balance-baseline-error.tex
+++ b/paper/sample-papers/plots/balance-baseline-error.tex
@@ -9,15 +9,22 @@
 \begin{axis}[
 tick align=outside,
 tick pos=left,
-title={Baseline error},
+%title={Baseline error},
 x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=-0.79, xmax=7.79,
 xtick style={color=black},
+xtick={0,1,2,3,4,5,6,7},
+xticklabel style={rotate=45},
+xticklabels = {SVM, DT, KNN, Ada, GNB, MPR, RF, QDA},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=0.217451612903226,
-ytick style={color=black}
+ytick style={color=black},
+ytick={0,0.05,0.1,0.15,0.2},
+yticklabels = {0,0.05,0.1,0.15,0.2},
+height=4.cm,
+width=7cm,
 ]
 \draw[draw=none,fill=color0] (axis cs:-0.4,0) rectangle (axis cs:0.4,0.0953225806451613);
 \draw[draw=none,fill=color1] (axis cs:0.6,0) rectangle (axis cs:1.4,0.207096774193548);
