--- a/paper/sample-papers/plots/balance-oneC-6-RF-QDA.tex
+++ b/paper/sample-papers/plots/balance-oneC-6-RF-QDA.tex
@@ -20,7 +20,9 @@ xtick style={color=black},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.05458064516129,
-ytick style={color=black}
+ytick style={color=black},
+height=4.cm,
+width=7cm,
 ]
 \addplot [very thick, blue, dashed, forget plot]
 table {%
