--- a/paper/sample-papers/plots/balance-oneC-0.tex
+++ b/paper/sample-papers/plots/balance-oneC-0.tex
@@ -3,7 +3,6 @@
 
 \definecolor{color0}{rgb}{1,0,1}
 \definecolor{color1}{rgb}{1,0.647058823529412,0}
-\definecolor{color2}{rgb}{0.647058823529412,0.164705882352941,0.164705882352941}
 
 \begin{axis}[
 legend cell align={left},
@@ -11,8 +10,8 @@ legend style={
   fill opacity=0.8,
   draw opacity=1,
   text opacity=1,
-  at={(0.97,0.03)},
-  anchor=south east,
+  at={(0.03,0.97)},
+  anchor=north west,
   draw=white!80!black
 },
 tick align=outside,
@@ -82,62 +81,6 @@ table {%
 0.2 0.859838709677419
 };
 \addlegendentry{DT}
-\addplot [very thick, color2, dashed, forget plot]
-table {%
-0.01 0.569193548387097
-0.03 0.57258064516129
-0.05 0.59758064516129
-0.1 0.755322580645161
-0.15 0.89241935483871
-0.2 0.916612903225806
-};
-\addplot [very thick, color2, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
-table {%
-0.01 0
-0.03 0.01
-0.05 0.134838709677419
-0.1 0.67
-0.15 0.754354838709677
-0.2 0.846451612903226
-};
-\addplot [color2]
-table {%
-0.01 0
-0.03 0.569193548387097
-0.05 0.571129032258064
-0.1 0.672741935483871
-0.15 0.754354838709677
-0.2 0.848225806451613
-};
-\addlegendentry{KNN}
-\addplot [very thick, green!50.1960784313725!black, dashed, forget plot]
-table {%
-0.01 0.74
-0.03 0.81241935483871
-0.05 0.866612903225806
-0.1 0.958709677419355
-0.15 0.913870967741935
-0.2 0.85258064516129
-};
-\addplot [very thick, green!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
-table {%
-0.01 0.0891935483870968
-0.03 0.208387096774194
-0.05 0.309838709677419
-0.1 0.59
-0.15 0.742903225806452
-0.2 0.77758064516129
-};
-\addplot [green!50.1960784313725!black]
-table {%
-0.01 0.0891935483870968
-0.03 0.773064516129032
-0.05 0.828225806451613
-0.1 0.888225806451613
-0.15 0.877258064516129
-0.2 0.836774193548387
-};
-\addlegendentry{Ada}
 \end{axis}
 
 \end{tikzpicture}
