--- a/paper/sample-papers/plots/balance-oneC-4.tex
+++ b/paper/sample-papers/plots/balance-oneC-4.tex
@@ -5,14 +5,7 @@
 
 \begin{axis}[
 legend cell align={left},
-legend style={
-  fill opacity=0.8,
-  draw opacity=1,
-  text opacity=1,
-  at={(0.97,0.03)},
-  anchor=south east,
-  draw=white!80!black
-},
+legend style={fill opacity=0.8, draw opacity=1, text opacity=1, draw=white!80!black},
 tick align=outside,
 tick pos=left,
 x grid style={white!69.0196078431373!black},
@@ -80,62 +73,6 @@ table {%
 0.2 0.813387096774193
 };
 \addlegendentry{MPR}
-\addplot [very thick, blue, dashed, forget plot]
-table {%
-0.01 0.440322580645161
-0.03 0.542096774193549
-0.05 0.593709677419355
-0.1 0.74741935483871
-0.15 0.914193548387097
-0.2 0.927903225806452
-};
-\addplot [very thick, blue, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
-table {%
-0.01 0.208870967741936
-0.03 0.299193548387097
-0.05 0.368064516129032
-0.1 0.692258064516129
-0.15 0.895
-0.2 0.922741935483871
-};
-\addplot [blue]
-table {%
-0.01 0.20758064516129
-0.03 0.467258064516129
-0.05 0.535322580645161
-0.1 0.749193548387097
-0.15 0.908225806451613
-0.2 0.92258064516129
-};
-\addlegendentry{RF}
-\addplot [very thick, white!50.1960784313725!black, dashed, forget plot]
-table {%
-0.01 0.683870967741935
-0.03 0.855806451612903
-0.05 0.903064516129032
-0.1 0.942258064516129
-0.15 0.876290322580645
-0.2 0.823709677419355
-};
-\addplot [very thick, white!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
-table {%
-0.01 0.319838709677419
-0.03 0.839354838709678
-0.05 0.902258064516129
-0.1 0.944032258064516
-0.15 0.876935483870968
-0.2 0.823225806451613
-};
-\addplot [white!50.1960784313725!black]
-table {%
-0.01 0.319838709677419
-0.03 0.841129032258065
-0.05 0.904032258064516
-0.1 0.945
-0.15 0.876935483870968
-0.2 0.823225806451613
-};
-\addlegendentry{QDA}
 \end{axis}
 
 \end{tikzpicture}
