Updates from Overleaf

--- a/paper/sample-papers/sections/04-experiments.tex
+++ b/paper/sample-papers/sections/04-experiments.tex
@@ -27,8 +27,8 @@
       }
     \qquad
     \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
-      %\includeteximage{plots/balance-oneC-0-SVM-DT}
-      \includeteximage{plots/balance-dist-class}
+      \includeteximage{plots/balance-oneC-0}
+      %\includeteximage{plots/balance-dist-class}
       }
     \qquad
     \subfigure[A Square]{\label{fig:square}%
