--- a/paper/sample-papers/plots/balance-oneC-6.tex
+++ b/paper/sample-papers/plots/balance-oneC-6.tex
@@ -7,7 +7,7 @@ legend style={
   fill opacity=0.8,
   draw opacity=1,
   text opacity=1,
-  at={(0.03,0.03)},
+  at={(0.6,0.05)},
   anchor=south west,
   draw=white!80!black
 },
@@ -17,10 +17,15 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
+xtick={.01,.03,.05,.1,.15,.2},
+xticklabels = {.01,.03,.05,.1,.15,.2},
+%xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=1.05458064516129,
-ytick style={color=black}
+ytick style={color=black},
+height=4.3cm,
+width=7cm,
 ]
 \addplot [very thick, blue, dashed, forget plot]
 table {%
