--- a/paper/sample-papers/sections/04-experiments.tex
+++ b/paper/sample-papers/sections/04-experiments.tex
@@ -35,29 +35,29 @@
       \includeteximage{plots/balance-dist-class}
       }
     \qquad
-    \subfigure[A Square]{\label{fig:square}%
-      \includeteximage{plots/balance-dist-class}
+    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+      \includeteximage{plots/balance-oneC-2}
       }
     \qquad
     \subfigure[A Square]{\label{fig:square}%
       \includeteximage{plots/balance-dist-class}
       }
-    %\qquad
-    %\subfigure[A Square]{\label{fig:square}%
-    %  \includeteximage{plots/balance-dist-class}
-    %  }
-    %\qquad
-    %\subfigure[A Square]{\label{fig:square}%
-    %  \includeteximage{plots/balance-dist-class}
-    %  }
-    %\qquad
-    %\subfigure[A Square]{\label{fig:square}%
-    %  \includeteximage{plots/balance-dist-class}
-    %  }
-    %\qquad
-    %\subfigure[A Square]{\label{fig:square}%
-    %  \includeteximage{plots/balance-dist-class}
-    %  }
+    \qquad
+    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+      \includeteximage{plots/balance-oneC-4}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
+    \qquad
+    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+      \includeteximage{plots/balance-oneC-6}
+      }
+    \qquad
+    \subfigure[A Square]{\label{fig:square}%
+      \includeteximage{plots/balance-dist-class}
+      }
   }
 \end{figure}
 
