paper: test with plots

--- a/paper/sample-papers/plots/balance-dist-class.tex
+++ b/paper/sample-papers/plots/balance-dist-class.tex
@@ -15,7 +15,7 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=302.4,
 ytick style={color=black},
-height=4.cm,
+height=4.7cm,
 width=7cm,
 ]
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:-0.4,0) rectangle (axis cs:0.4,49);
