--- a/paper/sample-papers/sections/04-experiments.tex
+++ b/paper/sample-papers/sections/04-experiments.tex
@@ -45,31 +45,31 @@ Next evening was Halloween. The girls were at the school disco. “Are you bette
       %\includeteximage{plots/balance-dist-class}
       }
     \qquad
-    \subfigure[A Square]{\label{fig:square}%
+    \subfigure[$avgC$: SVM and DT]{\label{fig:square}%
       \includeteximage{plots/balance-avgC-0}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: KNN and Ada]{\label{fig:square}%
       \includeteximage{plots/balance-oneC-2}
       }
     \qquad
-    \subfigure[A Square]{\label{fig:square}%
+    \subfigure[$avgC$: KNN and Ada]{\label{fig:square}%
       \includeteximage{plots/balance-avgC-2}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: GNB and MPR]{\label{fig:square}%
       \includeteximage{plots/balance-oneC-4}
       }
     \qquad
-    \subfigure[A Square]{\label{fig:square}%
+    \subfigure[$avgC$: GNB and MPR]{\label{fig:square}%
       \includeteximage{plots/balance-avgC-4}
       }
     \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:square}%
+    \subfigure[$oneC$: RF and QDA]{\label{fig:square}%
       \includeteximage{plots/balance-oneC-6}
       }
     \qquad
-    \subfigure[A Square]{\label{fig:square}%
+    \subfigure[$avgC$: RF and QDA]{\label{fig:square}%
       \includeteximage{plots/balance-avgC-6}
       }
   }
