--- a/paper/sample-papers/plots/balance-baseline-error.tex
+++ b/paper/sample-papers/plots/balance-baseline-error.tex
@@ -9,7 +9,7 @@
 \begin{axis}[
 tick align=outside,
 tick pos=left,
-%title={Baseline error},
+%%title={Baseline error},
 x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=-0.79, xmax=7.79,
@@ -21,8 +21,8 @@ y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=0.217451612903226,
 ytick style={color=black},
-ytick={0,0.05,0.1,0.15,0.2},
-yticklabels = {0,0.05,0.1,0.15,0.2},
+ytick = {0,0.05,0.1,0.15,0.2},
+yticklabels={.00,.05,.10,.15,.20},
 height=4.cm,
 width=7cm,
 ]
