--- a/paper/sample-papers/plots/glass-avgC-0.tex
+++ b/paper/sample-papers/plots/glass-avgC-0.tex
@@ -13,10 +13,15 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
+xtick={.01,.03,.05,.1,.15,.2},
+%xticklabels = {.01,.03,.05,.1,.15,.2},
+xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=6.336,
-ytick style={color=black}
+ytick style={color=black},
+height=4.3cm,
+width=7cm,
 ]
 \addplot [very thick, color0, dashed, forget plot]
 table {%
