--- a/paper/sample-papers/plots/iris-dist-class.tex
+++ b/paper/sample-papers/plots/iris-dist-class.tex
@@ -4,7 +4,7 @@
 \begin{axis}[
 tick align=outside,
 tick pos=left,
-title={Distribution between classes for iris dataset},
+%title={Distribution between classes for iris dataset},
 x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=-0.54, xmax=2.54,
@@ -12,7 +12,9 @@ xtick style={color=black},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=52.5,
-ytick style={color=black}
+ytick style={color=black},
+height=4.7cm,
+width=7cm,
 ]
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:-0.4,0) rectangle (axis cs:0.4,50);
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:0.6,0) rectangle (axis cs:1.4,50);
