--- a/paper/sample-papers/plots/wine_Red-dist-class.tex
+++ b/paper/sample-papers/plots/wine_Red-dist-class.tex
@@ -4,7 +4,7 @@
 \begin{axis}[
 tick align=outside,
 tick pos=left,
-title={Distribution between classes for wine\_Red dataset},
+%title={Distribution between classes for wine\_Red dataset},
 x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=2.31, xmax=8.69,
@@ -12,7 +12,9 @@ xtick style={color=black},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=715.05,
-ytick style={color=black}
+ytick style={color=black},
+height=4.7cm,
+width=7cm,
 ]
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:2.6,0) rectangle (axis cs:3.4,10);
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:3.6,0) rectangle (axis cs:4.4,53);
