--- a/paper/sample-papers/plots/yeast-dist-class.tex
+++ b/paper/sample-papers/plots/yeast-dist-class.tex
@@ -4,7 +4,7 @@
 \begin{axis}[
 tick align=outside,
 tick pos=left,
-title={Distribution between classes for yeast dataset},
+%title={Distribution between classes for yeast dataset},
 x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=-0.89, xmax=9.89,
@@ -12,7 +12,9 @@ xtick style={color=black},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=0, ymax=486.15,
-ytick style={color=black}
+ytick style={color=black},
+height=4.7cm,
+width=7cm,
 ]
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:-0.4,0) rectangle (axis cs:0.4,463);
 \draw[draw=none,fill=white!50.1960784313725!black] (axis cs:0.6,0) rectangle (axis cs:1.4,5);
